--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -96,5 +96,45 @@
       <button>Select this plan</button>
     </div>
 
+     <!-- TESTIMONIALS
+    ================================= -->
+    <div id="testimonials">
+      <h2>
+        Who's using it?
+      </h2>
+      <p>
+        Jott.ly has around 150,000 satisifed customers sharing and collaborating with teams throughout 35 countries. Here's what a few had to say:
+      </p>
+      <blockquote>
+        “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+      </blockquote>
+      <div class="avatar">
+        <img src="images/avatar1.jpg" alt="Danny S.">
+        <p>
+          Danny S.
+        </p>
+      </div>
+
+      <blockquote>
+        “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+      </blockquote>
+      <div class="avatar">
+        <img src="images/avatar2.jpg" alt="Jonathan M.">
+        <p>
+          Jonathan M.
+        </p>
+      </div>
+
+      <blockquote>
+        “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+      </blockquote>
+      <div class="avatar">
+        <img src="images/avatar3.jpg" alt="Chloe P.">
+        <p>
+          Chloe P.
+        </p>
+      </div>
+    </div>
+
 </body>
 </html>
