--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -136,5 +136,35 @@
       </div>
     </div>
 
+    <!-- CTA
+    ================================= -->
+    <div id="action">
+      <h2>
+        Give it a try before you commit.
+      </h2>
+      <p>
+        You can test drive Jott.ly before deciding on one of our plans. Just give us your email address and we'll send you the details:
+      </p>
+      <input type="text" placeholder="Enter your email address">
+      <button type="submit">Sign Up Now!</button>
+    </div>
+
+    <!-- FOOTER
+    ================================= -->
+    <div id="footer">
+      <nav>
+        <ul>
+          <li><a href="#">About</li>
+          <li><a href="#">Contact</li>
+          <li><a href="#">Privacy Policy</li>
+          <li><a href="#">Terms</li>
+        </ul>
+      </nav>
+      <img src="images/small_logo.png">
+      <p>
+        &copy; 2015. Jott.ly. All Rights Reserved.
+      </p>
+    </div>
+
 </body>
 </html>
