--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -70,9 +70,15 @@
   <!-- BENEFITS
   ================================= -->
   <div id="benefits">
-    <h2>What is Jott.ly, exactly?</h2>
-    <p>Our web app allows you to create documents with real-time editing and collaborating capabilities while storing content and information to share with others.</p>
-    <img src="images/app.png" alt="Jottly's Web App">
+    <div class="container">
+      <div class="twelve columns offset-by-two">
+        <h2>What is Jott.ly, exactly?</h2>
+        <p>Our web app allows you to create documents with real-time editing and collaborating capabilities while storing content and information to share with others.</p>
+    </div>
+    <div class="fourteen columns offset-by-one">
+      <img class="scale-with-grid" src="images/app.png" alt="Jottly's Web App">
+    </div>
+    </div>
   </div>
 
   <!-- PRICING
