--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -153,71 +153,104 @@
      <!-- TESTIMONIALS
     ================================= -->
     <div id="testimonials">
-      <h2>
-        Who's using it?
-      </h2>
-      <p>
-        Jott.ly has around 150,000 satisifed customers sharing and collaborating with teams throughout 35 countries. Here's what a few had to say:
-      </p>
-      <blockquote>
-        “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
-      </blockquote>
-      <div class="avatar">
-        <img src="images/avatar1.jpg" alt="Danny S.">
-        <p>
-          Danny S.
-        </p>
-      </div>
+      <div class="container">
+        <div class="twelve columns offset-by-two">
+          <h2>
+            Who's using it?
+          </h2>
+          <p>
+            Jott.ly has around 150,000 satisifed customers sharing and collaborating with teams throughout 35 countries. Here's what a few had to say:
+          </p>
+        </div>
+          <div class="one-third column">
+            <blockquote>
+              “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+            </blockquote>
+            <div class="avatar">
+              <img src="images/avatar1.jpg" alt="Danny S.">
+              <p>
+                Danny S.
+              </p>
+            </div>
+          </div>
 
-      <blockquote>
-        “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
-      </blockquote>
-      <div class="avatar">
-        <img src="images/avatar2.jpg" alt="Jonathan M.">
-        <p>
-          Jonathan M.
-        </p>
-      </div>
+          <div class="one-third column">
+            <blockquote>
+              “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+            </blockquote>
+            <div class="avatar">
+              <img src="images/avatar2.jpg" alt="Jonathan M.">
+              <p>
+                Jonathan M.
+              </p>
+            </div>
+          </div>
 
-      <blockquote>
-        “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
-      </blockquote>
-      <div class="avatar">
-        <img src="images/avatar3.jpg" alt="Chloe P.">
-        <p>
-          Chloe P.
-        </p>
+          <div class="one-third column">
+            <blockquote>
+              “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
+            </blockquote>
+            <div class="avatar">
+              <img src="images/avatar3.jpg" alt="Chloe P.">
+              <p>
+                Chloe P.
+              </p>
+            </div>
+          </div>
       </div>
     </div>
 
     <!-- CTA
     ================================= -->
     <div id="action">
-      <h2>
-        Give it a try before you commit.
-      </h2>
-      <p>
-        You can test drive Jott.ly before deciding on one of our plans. Just give us your email address and we'll send you the details:
-      </p>
-      <input type="text" placeholder="Enter your email address">
-      <button type="submit">Sign Up Now!</button>
+      <div class="container">
+        <div class="twelve columns offset-by-two">
+          <h2>
+            Give it a try before you commit.
+          </h2>
+          <p>
+            You can test drive Jott.ly before deciding on one of our plans. Just give us your email address and we'll send you the details:
+          </p>
+          <div class="container">
+            <div class="row">
+              <div class="eight columns alpha">
+                <input type="text" placeholder="Enter your email address">
+              </div>
+              <div class="four columns omega">
+                <button type="submit">Sign Up Now!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- FOOTER
     ================================= -->
     <div id="footer">
-      <nav>
-        <ul>
-          <li><a href="#">About</li>
-          <li><a href="#">Contact</li>
-          <li><a href="#">Privacy Policy</li>
-          <li><a href="#">Terms</li>
-        </ul>
-      </nav>
-      <img src="images/small_logo.png">
-      <p>
-        &copy; 2015. Jott.ly. All Rights Reserved.
-      </p>
+      <div class="container">
+        <div class="twelve columns">
+        <nav>
+          <ul>
+            <li><a href="#">About</li>
+            <li><a href="#">Contact</li>
+            <li><a href="#">Privacy Policy</li>
+            <li><a href="#">Terms</li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="two columns">
+        <img src="images/small_logo.png" alt="Jottly logo">
+      </div>
+
+      <div class="two columns">
+        <p>
+          &copy; 2015. Jott.ly. All Rights Reserved.
+        </p>
+      </div>
+
+      </div>
     </div>
 
 </body>
