--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -37,9 +37,8 @@
           <a href="#"><img src="images/logo.png" alt="Jottly"></a>
         </div>
       </div>
-    </div>
 
-    <div class="thirteen columns">
+    <div class="nine columns">
       <nav>
         <ul>
           <li><a href="#">Sign In</a></li>
@@ -47,17 +46,18 @@
         </ul>
       </nav>
     </div>
+    </div>
 
     <div class="container">
-      <div class="nine columns">
+      <div class="seven columns">
         <h1>An easier way to write &amp; collaborate</h1>
         <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home, and office</strong>. It's a simple way to store and share ideas with your loved ones, friends, and colleagues.</p>
         <div class="container">
           <div class="row">
-            <div class="five columns alpha">
+            <div class="six columns alpha">
               <input type="text" placeholder="Enter your email address">
             </div>
-            <div class="four columns omega">
+            <div class="five columns omega">
               <button type="submit">Sign Up Now
               </button>
             </div>
@@ -71,11 +71,11 @@
   ================================= -->
   <div id="benefits">
     <div class="container">
-      <div class="twelve columns offset-by-two">
+      <div class="nine columns offset-by-two">
         <h2>What is Jott.ly, exactly?</h2>
         <p>Our web app allows you to create documents with real-time editing and collaborating capabilities while storing content and information to share with others.</p>
     </div>
-    <div class="fourteen columns offset-by-one">
+    <div class="ten columns offset-by-one">
       <img class="scale-with-grid" src="images/app.png" alt="Jottly's Web App">
     </div>
     </div>
@@ -85,14 +85,16 @@
   ================================= -->
   <div id="pricing">
     <div class="container">
-      <div class="twelve columns offset-by-two">
+      <div class="nine columns offset-by-two">
         <h2>How much will it cost me?</h2>
         <p>
           It's rather inexpensive to use Jott.ly's suite of tools compared to several other services out there. We have several options to fit your budget and needs:
         </p>
       </div>
+    </div>
 
-      <div class="one third column">
+    <div class="container">
+      <div class="one-third column">
         <div class="pricebox">
           <header>
             <h3>Individual &amp; Family</h3>
@@ -110,7 +112,7 @@
         </div>
       </div>
 
-      <div class="one third column">
+      <div class="one-third column">
         <div class="pricebox">
           <header>
             <h3>Small Businesses</h3>
@@ -129,7 +131,7 @@
         </div>
       </div>
 
-      <div class="one third column">
+      <div class="one-third column">
         <div class="pricebox">
           <header>
             <h3>Enterprise</h3>
@@ -154,7 +156,7 @@
     ================================= -->
     <div id="testimonials">
       <div class="container">
-        <div class="twelve columns offset-by-two">
+        <div class="nine columns offset-by-two">
           <h2>
             Who's using it?
           </h2>
@@ -162,6 +164,9 @@
             Jott.ly has around 150,000 satisifed customers sharing and collaborating with teams throughout 35 countries. Here's what a few had to say:
           </p>
         </div>
+      </div>
+
+      <div class="container">
           <div class="one-third column">
             <blockquote>
               “Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo."
@@ -197,14 +202,14 @@
               </p>
             </div>
           </div>
-      </div>
+        </div>
     </div>
 
     <!-- CTA
     ================================= -->
     <div id="action">
       <div class="container">
-        <div class="twelve columns offset-by-two">
+        <div class="nine columns offset-by-two">
           <h2>
             Give it a try before you commit.
           </h2>
@@ -213,10 +218,10 @@
           </p>
           <div class="container">
             <div class="row">
-              <div class="eight columns alpha">
+              <div class="six columns alpha">
                 <input type="text" placeholder="Enter your email address">
               </div>
-              <div class="four columns omega">
+              <div class="five columns omega">
                 <button type="submit">Sign Up Now!</button>
               </div>
             </div>
@@ -229,7 +234,7 @@
     ================================= -->
     <div id="footer">
       <div class="container">
-        <div class="twelve columns">
+        <div class="nine columns">
         <nav>
           <ul>
             <li><a href="#">About</li>
