Tweaked some styles to make the Pricing section look better

--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -55,7 +55,7 @@
         <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home, and office</strong>. It's a simple way to store and share ideas with your loved ones, friends, and colleagues.</p>
         <div class="container">
           <div class="row">
-            <div class="seven columns alpha">
+            <div class="seven columns alpha"> <!-- Don't think this works in current version of Skeleton? I could probably figure out how to make the email signup field pull left but won't worry about it if I don't have time to finish this -->
               <input type="text" placeholder="Enter your email address">
             </div>
             <div class="five columns omega">
