Had to change the footer nav links to eight columns (since I'm using a 12-column grid instead of the 16 used in the tutorial)

--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -235,7 +235,7 @@
     ================================= -->
     <div id="footer">
       <div class="container">
-        <div class="nine columns">
+        <div class="eight columns">
         <nav>
           <ul>
             <li><a href="#">About</li>
