--- a/Jottly-alt/index.html
+++ b/Jottly-alt/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="stylesheets/animate.css">
+  <link rel="stylesheet" href="css/animate.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,7 +32,7 @@
 <body>
   <!-- HEADER
   ================================= -->
-  <div id="header">
+  <div id="header" class="animated fadeInDown">
     <div class="container">
       <div class="three columns">
         <div class="logo">
@@ -51,7 +51,7 @@
     </div>
 
     <div class="container">
-      <div class="seven columns headertext">
+      <div class="seven columns headertext animated fadeInDown">
         <h1>An easier way to write &amp; collaborate</h1>
         <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home, and office</strong>. It's a simple way to store and share ideas with your loved ones, friends, and colleagues.</p>
         <div class="container">
